--- a/distributed-process-async.cabal
+++ b/distributed-process-async.cabal
@@ -1,5 +1,5 @@
 name:           distributed-process-async
-version:        0.2.5
+version:        0.2.6
 cabal-version:  >=1.8
 build-type:     Simple
 license:        BSD3
@@ -31,15 +31,15 @@ library
                    base >= 4.4 && < 5,
                    data-accessor >= 0.2.2.3,
                    distributed-process >= 0.6.1 && < 0.8,
-                   exceptions >= 0.8.2.1 && < 0.9,
-                   binary >= 0.6.3.0 && < 0.9,
+                   exceptions >= 0.8.2.1 && < 1.0,
+                   binary >= 0.6.3.0,
                    deepseq >= 1.3.0.1 && < 1.5,
                    mtl,
-                   containers >= 0.4 && < 0.6,
+                   containers >= 0.6,
                    hashable >= 1.2.0.5 && < 1.3,
                    unordered-containers >= 0.2.3.0 && < 0.3,
                    fingertree < 0.2,
-                   stm >= 2.4 && < 2.5,
+                   stm >= 2.5,
                    time >= 1.8.0.2,
                    transformers
   extensions:      CPP
@@ -60,14 +60,14 @@ test-suite AsyncTests
                    distributed-process,
                    distributed-process-async,
                    distributed-process-systest >= 0.2.0,
-                   exceptions >= 0.8.2.1 && < 0.9,
+                   exceptions >= 0.8.2.1 && < 1.0,
                    network >= 2.5 && < 2.7,
                    network-transport >= 0.4 && < 0.6,
-                   network-transport-tcp >= 0.6 && < 0.7,
-                   binary >= 0.6.3.0 && < 0.9,
+                   network-transport-tcp >= 0.6 && < 0.9,
+                   binary >= 0.6.3.0,
                    deepseq >= 1.3.0.1 && < 1.5,
                    -- HUnit >= 1.2 && < 2,
-                   stm >= 2.3 && < 2.5,
+                   stm >= 2.5,
                    test-framework >= 0.6 && < 0.9,
                    test-framework-hunit,
                    rematch >= 0.2.0.0,
